--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "micro -l tcp://0.0.0.0:${PORT-8080}",
+    "start": "micro",
     "dev": "micro-dev"
   },
   "keywords": [],
